Fixes: NB#177148 - Items in Display applet are not aligned properly

--- a/src/displayapplet/display.css
+++ b/src/displayapplet/display.css
@@ -1,8 +1,3 @@
-#ScreenlightCombo {
-    /* From #CommonPanel, but apparently needed only for new theme..
-     *
-    background-image : meegotouch-panel-background $CORNER_MARGINS;
-     */
-
+#ScreenTimeout {
     padding-left : $PADDING_LARGE;
 }
